Criadas páginas index e vendas

--- a/Vendas.html
+++ b/Vendas.html
@@ -8,12 +8,8 @@
 </head>
 <body>
     <h1>Páginas de vendas
+    <p>Vendas = R$ 5000,00
         href="vendas.html">Ir para a página de vendas
         <a href="index.html">Voltar para página initial-scale
-
-    </h1>
-        
-    </h1>
-    
 </body>
-</html>
+</html><h1
